Added tinyobj loader module and code to load mesh to GPU

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/cap"]
 	path = deps/cap
 	url = git@github.com:sharmahimanshu22/cap.git
+[submodule "deps/tinyobjloader"]
+	path = deps/tinyobjloader
+	url = https://github.com/tinyobjloader/tinyobjloader.git
